force-app/main/default/objects/Logger__c/Logger__c.object-meta.xml
<CustomObject>
    <label>Integration Logger</label>
    <nameField>
        <label>In Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Loggers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>