force-app/main/default/objects/Logger__c/fields/Apex_Call_Trace__c.field-meta.xml
<CustomField>
    <fullName>Apex_Call_Trace__c</fullName>
    <description>Shows were the call is being made in the code.</description>
    <inlineHelpText>Shows were the call is being made in the code.</inlineHelpText>
    <label>Apex Call Trace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>