force-app/main/default/objects/Logger__c/fields/API_Verb__c.field-meta.xml
<CustomField>
    <fullName>API_Verb__c</fullName>
    <label>API Verb</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>PATCH</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>