force-app/main/default/objects/Logger__c/fields/Logger_Controller__c.field-meta.xml
<CustomField>
    <fullName>Logger_Controller__c</fullName>
    <description>Controller of this log record.</description>
    <inlineHelpText>Controller of this log record.</inlineHelpText>
    <label>Logger Controller</label>
    <referenceTo>Logg_Controller__c</referenceTo>
    <relationshipLabel>Integration Loggers</relationshipLabel>
    <relationshipName>Integration_Loggers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>