force-app/main/default/objects/Logger__c/fields/TEST_DO_NOT_DELTE_Account__c.field-meta.xml
<CustomField>
    <fullName>TEST_DO_NOT_DELTE_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Needed for testing purposes.</description>
    <inlineHelpText>Needed for testing purposes.</inlineHelpText>
    <label>TEST_DO_NOT_DELTE_Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integration Loggers</relationshipLabel>
    <relationshipName>Integration_Loggers</relationshipName>
    <type>Lookup</type>
</CustomField>